force-app/main/default/objects/Bot_Configuration__c/Bot_Configuration__c.object-meta.xml
<CustomObject>
    <label>Bot Configuration</label>
    <nameField>
        <label>Bot Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>