force-app/main/default/objects/Bot_Configuration__c/fields/Flag_Field__c.field-meta.xml
<CustomField>
    <fullName>Flag_Field__c</fullName>
    <label>Flag Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>