force-app/main/default/objects/Bot_Configuration__c/fields/Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Matching_Criteria__c</fullName>
    <label>Matching Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>