force-app/main/default/objects/Bot_Configuration__c/fields/Messaging_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Channel_Name__c</fullName>
    <label>Messaging Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>