force-app/main/default/objects/Bot_Configuration__c/fields/Related_To_Who_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Who_Id__c</fullName>
    <label>Related To Who Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>