force-app/main/default/objects/Bot_Configuration__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <label>Timeout(Minutes)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>