force-app/main/default/objects/Bot_Configuration__c/fields/Timeout_Message__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Message__c</fullName>
    <label>Timeout Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>